# Editor-GTK

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  configure.ac
binding_sample_game/: binding_sample_game.rproject
binding_sample_game/data/: game.xml
binding_sample_game/data/actors/: actor1.xml  actor2.xml
binding_sample_game/data/items/: item1.xml
binding_sample_game/data/maps/: map1.xml  map2.xml  map3.xml  map4.xml  maptree.xml
sample_game/data/: game.xml
sample_game/data/maps/: map1.xml  map10.xml  map2.xml  map3.xml  map4.xml  map5.xml  map6.xml  map7.xml  map8.xml  map9.xml  maptree.xml
sample_game/data/skills/: skill2.xml
src/: Easy.vala  Makefile.am  abstract_imageset.vala  action.vala  action_map_edit.vala  action_stack.vala  controller.vala  controller_main.vala  database_dialog.vala  dialog_database.vala  drawingarea_map.vala  drawingarea_tile_palette.vala  drawingarea_tileset.vala  easyrpg.vala  editor.vala  edittool.vala  enum.vala  i_paint_tiles.vala  i_select_tiles.vala  i_selectable_tiles.vala  main_window.vala  map_drawingarea.vala  map_edit_action.vala  map_properties_dialog.vala  map_shift_dialog.vala  maptree_menu.vala  maptree_treestore.vala  maptree_treeview.vala  menu_maptree.vala  model.vala  model_layer.vala  model_map.vala  model_party.vala  model_vehicle.vala  module_list_dialog.vala  project_create_dialog.vala  resources.vala  rm2k_chipset_imageset.vala  rm2k_chipset_lower_imageset.vala  rm2k_chipset_upper_imageset.vala  (+23 more)
src/sample_game/: sample_game.rproject
src/sample_game/data/: battle_commands.xml  project.xml
src/sample_game/data/actors/: actor2.xml
src/sample_game/data/actors/0/: actor.xml
src/sample_game/data/items/0/: item.xml
src/sample_game/data/maps/: map1.xml  map10.xml  map2.xml  map3.xml  map4.xml  map5.xml  map6.xml  map7.xml  map8.xml  map9.xml
src/sample_game/data/skills/: skill1.xml  skill2.xml
src/tools/: eraser.vala  pen.vala  rectangle.vala  zoom.vala
